AppChooserFrame: Fix 'unsafe call to Class.newInstance()' warnings.